All files are changed into material UI format done by thiru.

--- a/src/app/change-password/change-password.component.css
+++ b/src/app/change-password/change-password.component.css
@@ -423,6 +423,14 @@ select {
     }
 }
 
+/*/////////////////////////////////////////////////////
+[Button]*/
+
+.field1 {
+    width: 83%;
+    margin-left: 40px;
+}
+
 
 
 
