--- a/src/app/change-password/change-password.component.html
+++ b/src/app/change-password/change-password.component.html
@@ -1,5 +1,48 @@
 <body>
   <div class="limiter">
+    <div class="container-login100  loginback">
+      <div class="wrap-login100 p-l-55 p-r-55 p-t-65 p-b-54">
+        <form class="login100-form validate-form" [formGroup]="changepwdForm"
+          (ngSubmit)="onchangePwdFormClick($event, changepwdForm)">
+          <span class="login100-form-title p-b-49">
+            <img class="logo" src="../../assets/images/logo_nanda.png">
+          </span>
+          <h2 class="title">Change Password</h2>
+          <br>
+          <mat-form-field class="field1" appearance="outline">
+            <mat-label class="font">User Name</mat-label>
+            <mat-icon matPrefix>account_circle</mat-icon>
+            <input style="font-size: 17px;" formControlName="username" matInput placeholder="Username"
+              readonly="readonly">
+          </mat-form-field><br>
+          <mat-form-field class="field1" appearance="outline">
+            <mat-icon matPrefix>lock</mat-icon>
+            <mat-label>Password</mat-label>
+            <input matInput #password1 formControlName="password" style="font-size: 17px;" type="Password"
+              placeholder="Password">
+            <button type="button" mat-icon-button matSuffix (click)="changeType(password1, 1)">
+              <mat-icon>{{toggle1 ? 'visibility_off' : 'visibility'}}</mat-icon>
+            </button>
+            <!-- <mat-error
+              *ngIf="submitted && loginForm.controls['password'].invalid && loginForm.controls['password'].touched">
+              Password is required.
+            </mat-error> -->
+          </mat-form-field>
+          <div class="container-login100-form-btn p-t-30 ">
+            <button mat-button type="submit" style="background-color: rgb(10, 51, 98); color: #ffff;">
+              Login
+            </button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</body>
+
+
+
+<!-- <body>
+  <div class="limiter">
     <div class="container-login100 loginback">
       <div class="wrap-login100 p-l-55 p-r-55 p-t-65 p-b-54">
         <form
@@ -57,10 +100,6 @@
             </div>
           </div>
 
-          <!-- <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
-            <div *ngIf="f.password.errors.required">Password is required</div>
-          </div> -->
-
           <div class="container-login100-form-btn p-t-50">
             <div class="wrap-login100-form-btn">
               <button type="submit" class="login100-form-btn">
@@ -72,4 +111,4 @@
       </div>
     </div>
   </div>
-</body>
+</body> -->
