--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -423,7 +423,13 @@ select {
     }
 }
 
+/*/////////////////////////////////////////////////////
+[Button]*/
 
+.field1 {
+    width: 83%;
+    margin-left: 40px;
+}
 
 
 
