--- a/src/app/dash-board/booking/caseentry/caseentryy/caseentryy.component.html
+++ b/src/app/dash-board/booking/caseentry/caseentryy/caseentryy.component.html
@@ -1,143 +1,88 @@
 <fieldset class="scheduler-border">
     <legend class="scheduler-border">Case Entry</legend>
-    <div class="formData">
-        <form [formGroup]="caseentryForm" (ngSubmit)="onOrderClick($event, caseentryForm)">
-            <!-- <div class="row">
-                <div class="col-xs-3 col-sm-3">
-                    <div class="form-group">
-                        <div class="p-fluid p-grid p-formgrid">
-                            <div class="p-field p-col-12 p-md-5">
-                                <label path="date" for="date" cssClass="required">Date</label>
-                                <p-calendar [monthNavigator]="true" [yearNavigator]="true" formControlName="date" (input)="validateDateRange($event)"
-                                (onSelect)="validateDateRange($event)"
-                                    name="date" inputId="navigators" [showIcon]="true" inputId="icon">
-                                </p-calendar>
-                                <div *ngIf="submitted && f.date.errors" class="invalid-feedback">
-                                    <div *ngIf="f.date.errors.required">Date is Required</div>
-                                </div>
-                            </div>
-                        </div>
+    <form [formGroup]="caseentryForm" (ngSubmit)="onOrderClick($event, caseentryForm,f)" #f="ngForm">
+        <mat-form-field appearance="outline">
+            <mat-label for="appointmentNo">Appointment No</mat-label>
+            <mat-select formControlName="appointmentNo" (selectionChange)="onChange($event.value)">
+                <mat-option *ngFor="let bookingentrys of bookingentry" [value]="bookingentrys.bookingId">
+                    {{bookingentrys.appNo}}
+                </mat-option>
+            </mat-select>
+            <mat-error
+                *ngIf="submitted && caseentryForm.controls['appointmentNo'].invalid && caseentryForm.controls['appointmentNo'].touched">
+                Appointment No is required.
+            </mat-error>
+        </mat-form-field>
+        &nbsp;
+        &nbsp;
+        &nbsp;
+        <mat-form-field appearance="outline">
+            <mat-label>Doctor Name</mat-label>
+            <mat-select formControlName="doctorname">
+                <mat-option *ngFor="let doctorname of Doctormaster" [value]="doctorname.slNo">
+                    {{doctorname.doctorname}}
+                </mat-option>
+            </mat-select>
+            <mat-error
+                *ngIf="submitted && caseentryForm.controls['doctorname'].invalid && caseentryForm.controls['doctorname'].touched">
+                Doctor Name is required.
+            </mat-error>
+        </mat-form-field>
+        &nbsp;
+        &nbsp;
+        &nbsp;
+        <mat-form-field appearance="outline">
+            <mat-label class="font">Hospital Name</mat-label>
+            <input class="mat" formControlName="hospname" matInput readonly />
+        </mat-form-field>
+        &nbsp;
+        &nbsp;
+        &nbsp;
+        <label>Send Bill :
+            <mat-checkbox class="example-margin" formControlName="status" color="primary"></mat-checkbox>
+        </label>
+        <br>
+        <br>
+        <form [formGroup]="myForm">
+            <div formArrayName='times' fxLayout="column" fxLayoutGap="10px" style="margin-right: -35%;">
+                <div *ngFor="let time of this.fa?.value; let i = index;  trackBy:trackByFn" fxLayout="row">
+                    <div [formGroupName]="i" fxLayout="row">
+                        <mat-form-field appearance="outline">
+                            <mat-label>Machine</mat-label>
+                            <mat-select formControlName="mname">
+                                <mat-option *ngFor="let mslno of machiness" [value]="mslno.machinename">
+                                    {{mslno.machinename}}
+                                </mat-option>
+                            </mat-select>
+                        </mat-form-field>
+                        &nbsp;
+                        &nbsp;
+                        <mat-form-field appearance="outline">
+                            <mat-label class="font">Number of Case</mat-label>
+                            <input class="mat" type="number" formControlName="numofcase" matInput>
+                        </mat-form-field>
+                        &nbsp;
+                        &nbsp;
+                        <mat-form-field appearance="outline">
+                            <mat-label class="font">Charge</mat-label>
+                            <input class="mat" type="number" formControlName="charge" matInput>
+                        </mat-form-field>
+                        <button type="button" (click)="addGroup()" class="formbutton"><i
+                                class="fa fa-plus"></i></button> &nbsp;
+                        <button type="button" (click)="removeGroup(i)" class="formbutton"><i
+                                class="fa fa-minus"></i></button>
                     </div>
                 </div>
-            </div> -->
-            <div class="row">
-                <div class="col-xs-3 col-sm-3 ">
-                    <div class="form-group">
-                        <label for="appointmentNo">Appointment No</label>
-                        <select formControlName="appointmentNo" class="form-control" name="appointmentNo"
-                            id="appointmentNo" (change)="onChange($event)"
-                            [ngClass]="{ 'is-invalid': submitted && f.appointmentNo.errors }">
-                            <option value="" hidden> - Select the Appointment - </option>
-                            <option value="null"> - Select the Appointment - </option>
-                            <option *ngFor="let bookingentrys of bookingentry" [value]="bookingentrys.bookingId">
-                                {{bookingentrys.appNo}}
-                            </option>
-                        </select>
-                        <div *ngIf="submitted && f.appointmentNo.errors" class="invalid-feedback">
-                            <div *ngIf="f.appointmentNo.errors.required">Appointment No is required</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xs-3 col-sm-3 ">
-                    <div class="form-group">
-                        <label for="doctorname">Doctor Name</label>
-                        <select formControlName="doctorname" class="form-control" name="doctorname" id="doctorname"
-                            [ngClass]="{ 'is-invalid': submitted && f.doctorname.errors }">
-                            <option value="" hidden> - Select the Doctor - </option>
-                            <option value="null"> - Select the Doctor - </option>
-                            <option *ngFor="let doctorname of Doctormaster" [value]="doctorname.slNo">
-                                {{doctorname.doctorname}}
-                            </option>
-                        </select>
-                        <div *ngIf="submitted && f.doctorname.errors" class="invalid-feedback">
-                            <div *ngIf="f.doctorname.errors.required">Doctor Name is required</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xs-3">
-                    <!-- <div class="form-group">
-                        <label for="hospname">Hospital Name</label>
-                        <select formControlName="hospname" class="form-control" name="hospname" id="hospname"
-                            [ngClass]="{ 'is-invalid': submitted && f.hospname.errors }">
-                            <option value="" hidden> - Select the Doctor - </option>
-                            <option value="null"> - Select the Doctor - </option>
-                            <option *ngFor="let hospname of Doctormaster" [value]="hospname.slNo">
-                                {{hospname.hospitalname}}
-                            </option>
-                        </select>
-                        <div *ngIf="submitted && f.hospname.errors" class="invalid-feedback">
-                            <div *ngIf="f.hospname.errors.required">Hospital Name is required</div>
-                        </div>
-                    </div> -->
-                    <div class="form-group">
-                        <label path="hospname" for="hospname" cssClass="required">Hospital Name</label>
-                        <input class="form-control" formControlName="hospname" readonly />
-                    </div>
-                </div>
-                <div class="col-xs-3 form-group">
-                    <div class="form-group">
-                        <label>Send Bill</label>
-                        <div class="switch">
-                            <input type="checkbox" formControlName="status" checked style="width: 20px;height: 20px">
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-6 col-lg-6 ">
-                    <form [formGroup]="myForm">
-                        <div fxLayout="row">
-                            <label>Machine</label>
-                            <label style="margin-left: 149px;">Number of Cases</label>
-                            <label style="margin-left: 98px;">Charges</label>
-                        </div>
-                        <div formArrayName='times' fxLayout="column" fxLayoutGap="10px" style="margin-right: -35%;">
-                            <div *ngFor="let time of this.fa?.value; let i = index;  trackBy:trackByFn" fxLayout="row">
-                                <div [formGroupName]="i" fxLayout="row">
-                                    <select formControlName="mname" class="form-control" name="mname" id="mname">
-                                        <option value="" hidden> - Select the Machine - </option>
-                                        <option value="null"> - Select the Machine - </option>
-                                        <option *ngFor="let mslno of machiness" [value]="mslno.machinename">
-                                            {{mslno.machinename}}
-                                        </option>
-                                    </select>
-                                    &nbsp;
-
-                                    <input formControlName="numofcase" class="form-control" type="number"
-                                        path="numofcase" name="numofcase" style="margin-left: 1%;" />
-                                    &nbsp;
-                                    <input formControlName="charge" class="form-control" type="number" path="charge"
-                                        name="charge" style="margin-left: 1%;" />
-                                </div>
-
-                                <button (click)="addGroup()" class="btn btn-primary btn-sm"><i class="fa fa-plus"
-                                        aria-hidden="true"></i></button>
-                                <button (click)="removeGroup(i)" class="btn btn-primary btn-sm"><i class="fa fa-minus"
-                                        aria-hidden="true"></i></button>
-                            </div>
-                            <div *ngIf="submitted && fa.status === 'INVALID'" class="invalid-feedback"
-                                style="font-size: 10px;display: flex;flex-direction: row;">
-                                <span *ngIf="fa.status === 'INVALID'">Machine Details is required</span>
-                            </div>
-
-                        </div><br>
-                    </form>
-                </div>
-            </div>
-            <div class="row" *ngIf="title!=='Entry'">
-                <div class="col-sm-12 ">
-                    <div class="form-group text-right">
-                        <button type="submit" class="btn btn-primary mr-2">
-                            Submit
-                        </button>
-                        <button type="button" class="btn btn-warning mr-2" (click)="onReset()">
-                            Clear
-                        </button>
-                    </div>
-                </div>
-            </div>
+                <mat-error *ngIf="submitted && fa.status === 'INVALID'" class="invalid-feedback">
+                    <p *ngIf="fa.status === 'INVALID'" style="margin-top: -20px; font-size: 10px;">Machine Details is
+                        required</p>
+                </mat-error>
+            </div><br>
         </form>
-    </div>
+        <br>
+        <button mat-button type="button" class="material-btn mr-2" (click)="onReset(f)">Clear</button>
+        <button mat-button type="submit" class="material-btn mr-2">Submit</button>
+    </form>
 </fieldset>
 <fieldset class="scheduler-border">
     <legend class="scheduler-border">Case Entry</legend>
