--- a/src/app/dash-board/header/header.component.html
+++ b/src/app/dash-board/header/header.component.html
@@ -11,201 +11,69 @@
                     <!-- <img src="{{downloadUrl}}"> -->
                     <!-- </label> -->
                     <span routerLink="/app-dash-board" style="margin-left: -6px">
-                        <i aria-hidden="true"></i>&nbsp; {{'MM LASER'|translate}}
+                        <i aria-hidden="true"></i>&nbsp; MM LASER
                     </span>
                 </h2>
             </div>
+
             <div>
-                <ul class="setting-menu-list pull-right" style="margin: 0">
-                    <li class="setting">
-                        {{'Welcome'}} {{ user?.firstname | titlecase }} {{ user?.lastname | titlecase }}&nbsp;
-                    </li>
-                    <img src="../../../assets/images/avatar 7.png" />
-                    <!-- <img src="{{downloadUrl}}"> -->
-
-
-                    <li class="setting">
-                        <a><i class="fa fa-paint-brush" style="color: white" aria-hidden="true" [(colorPicker)]="themes"
-                                [cpOKButton]="true" [cpOKButtonClass]="' btn-primary btn-xs button'"
-                                [cpOKButtonText]="'Reset'" [cpCancelButton]="true"
-                                [cpCancelButtonClass]="'btn-primary btn-xs'" [cpCancelButtonText]="'Cancel'"
-                                [cpSaveClickOutside]="false" [cpCloseClickOutside]="false" [cpPresetColors]="[
-                                    '#9400D3',
-                                    '#0000FF',
-                                    '#00FF00',
-                                    '#FFFF00',
-                                    '#FF7F00',
-                                    '#FF0000'
-                                ]" [cpPositionRelativeToArrow]="true" [cpPosition]="'left'" [cpPositionOffset]="'80%'"
-                                [cpAlphaChannel]="'disabled'" [cpDisableInput]="false" [cpOutputFormat]="'hex'"
-                                [cpWidth]="'270px'" [cpHeight]="'390px'" (cpSliderChange)="colorPicker($event)"
-                                (colorPickerSelect)="defaultColor()"></i></a>
-                    </li>
-
-                    <!-- <li class="link" class="setting">
-                        <span id="notification_count"></span>
-                        <span style="color: white" id="notificationLink">
-                            <i
-                                class="fa fa-bell"
-                                aria-hidden="true"
-                                title="View Notification"
-                            ></i
-                        ></span>
-                        <div id="notificationContainer">
-                            <div id="notificationsBody" class="notifications"></div>
-                        </div>
-                    </li> -->
-
-                    <li class="setting" *ngIf="role == 'Admin'">
-                        <div class="dropdown">
-                            <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1"
-                                style="color: white" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true"
-                                class="bttn">
-                                <i class="fa fa-cog" [ngClass]="
+                <mat-nav-list class="setting-menu-list pull-right mat-head">
+                    <a (click)="submit()" [ngClass]="
+                                parentMenuString == 'Logout' ? 'is-actived' : ''
+                            " (click)="onMenuParentClick('Logout', 'Logout')">
+                        <i class="fa fa-sign-out color" aria-hidden="true" title="Logout"></i></a>
+                    <!-- <mat-icon aria-hidden="true" title="Logout" style="margin-top: 2px;">logout</mat-icon></a> -->
+                </mat-nav-list>
+                <mat-nav-list class="setting-menu-list pull-right mat-head">
+                    <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1"
+                        style="color: white" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true"
+                        class="bttn">
+                        <i class="fa fa-cog" [ngClass]="
                                         parentMenuString == 'Setting'
                                             ? 'is-active'
                                             : ''
                                     " aria-hidden="true" title="More options"></i>
-                            </button>
+                    </button>
+                    <ul class="dropdown-menu pull-right" aria-labelledby="dropdownMenu1">
+                        <mat-nav-list routerLink="./app-setting/app-profile/app-registration">
+                            <a [ngStyle]="{ color: colorthemes_1 }" [ngClass]="
+                                                childMenuString == 'Profile'
+                                                    ? 'is-active'
+                                                    : ''
+                                            " (click)="
+                                                onMenuChildClick(
+                                                    'Setting',
+                                                    'Profile'
+                                                )
+                                            ">Profile</a>
+                        </mat-nav-list>
+                    </ul>
 
-                            <!-- [ngClass]="parentMenuString == 'Purchase Order' ? 'is-active' : ''"
-                        (click)="onMenuParentClick('Purchase Order', 'Purchase Order')">
-                            <a><i class="fa fa-shopping-cart" [ngClass]="parentMenuString == 'Purchase Order' ? 'is-active' : ''">
-                            </i><span [ngClass]="parentMenuString == 'Purchase Order' ? 'is-active' : ''" -->
-
-                            <ul class="dropdown-menu pull-right" aria-labelledby="dropdownMenu1">
-                                <li routerLink="/app-dash-board">
-                                    <a [ngStyle]="{ color: colorthemes_1 }" [ngClass]="
-                                            childMenuString == 'DashBoard'
-                                                ? 'is-active'
-                                                : ''
-                                        " (click)="
-                                            onMenuChildClick(
-                                                'Setting',
-                                                'DashBoard'
-                                            )
-                                        ">{{'DashBoard'|translate}}</a>
-                                </li>
-
-                                <li routerLink="./app-setting/app-profile/app-registration">
-                                    <a [ngStyle]="{ color: colorthemes_1 }" [ngClass]="
-                                            childMenuString == 'Profile'
-                                                ? 'is-active'
-                                                : ''
-                                        " (click)="
-                                            onMenuChildClick(
-                                                'Setting',
-                                                'Profile'
-                                            )
-                                        ">{{'Profile'|translate}}</a>
-                                </li>
-
-                                <!-- <li routerLink="./app-setting/app-settings">
-                                    <a [ngStyle]="{ color: colorthemes_1 }" [ngClass]="
-                                            childMenuString == 'Settings'
-                                                ? 'is-active'
-                                                : ''
-                                        " (click)="
-                                            onMenuChildClick(
-                                                'Setting',
-                                                'Settings'
-                                            )
-                                        ">{{'Settings'|translate}}</a>
-                                </li> -->
-
-                                <!-- <li routerLink="./app-setting/app-user-theme">
-                                    <a
-                                        [ngStyle]="{ color: colorthemes_1 }"
-                                        [ngClass]="
-                                            childMenuString == 'UserTheme'
-                                                ? 'is-active'
-                                                : ''
-                                        "
-                                        (click)="
-                                            onMenuChildClick(
-                                                'Setting',
-                                                'UserTheme'
-                                            )
-                                        "
-                                        >{{'Themes'|translate}}</a
-                                    >
-                                </li>
-                                
-                              <li
-                                    routerLink="./app-setting/app-app-language-setting"
-                                >
-                                    <a
-                                        [ngStyle]="{ color: colorthemes_1 }"
-                                        [ngClass]="
-                                            childMenuString == 'app-language-setting'
-                                                ? 'is-active'
-                                                : ''
-                                        "
-                                        (click)="
-                                            onMenuChildClick(
-                                                'Setting',
-                                                'app-language-setting'
-                                            )
-                                        "
-                                        >{{'Application Language Setting'|translate}}</a
-                                    >
-                                </li> -->
-                                <!-- <li
-                                    routerLink="./app-setting/app-application-logo-setting"
-                                >
-                                    <a
-                                        [ngStyle]="{ color: colorthemes_1 }"
-                                        [ngClass]="
-                                            childMenuString ==
-                                            'Application Logo Setting'
-                                                ? 'is-active'
-                                                : ''
-                                        "
-                                        (click)="
-                                            onMenuChildClick(
-                                                'Setting',
-                                                'Application Logo Setting'
-                                            )
-                                        "
-                                        >{{'Application Logo Setting'|translate}}</a
-                                    >
-                                </li> -->
-                            </ul>
-                        </div>
-                    </li>
-                    <!-- <li class="setting">
-                        <div class="dropdown">
-                            <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" style="color: white" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" class="bttn">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-translate" viewBox="0 0 16 16">
-                                    <path d="M4.545 6.714 4.11 8H3l1.862-5h1.284L8 8H6.833l-.435-1.286H4.545zm1.634-.736L5.5 3.956h-.049l-.679 2.022H6.18z"/>
-                                    <path d="M0 2a2 2 0 0 1 2-2h7a2 2 0 0 1 2 2v3h3a2 2 0 0 1 2 2v7a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2v-3H2a2 2 0 0 1-2-2V2zm2-1a1 1 0 0 0-1 1v7a1 1 0 0 0 1 1h7a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H2zm7.138 9.995c.193.301.402.583.63.846-.748.575-1.673 1.001-2.768 1.292.178.217.451.635.555.867 1.125-.359 2.08-.844 2.886-1.494.777.665 1.739 1.165 2.93 1.472.133-.254.414-.673.629-.89-1.125-.253-2.057-.694-2.82-1.284.681-.747 1.222-1.651 1.621-2.757H14V8h-3v1.047h.765c-.318.844-.74 1.546-1.272 2.13a6.066 6.066 0 0 1-.415-.492 1.988 1.988 0 0 1-.94.31z"/>
-                               
-                                   [ngClass]="
-                                        parentMenuString == 'Setting'
-                                            ? 'is-active'
-                                            : ''
-                                    "
-                                    aria-hidden="true"
-                                    title="Language"
-                                >   </svg>
-                            </button>
-
-                        
-                            <ul class="dropdown-menu pull-right" aria-labelledby="dropdownMenu1">
-                                <li *ngFor="let applanguagesetting of applanguagesettings">
-                                    <a [ngStyle]="{ color: colorthemes_1 }"  (click)="onLanguageClick($event, applanguagesetting)">{{applanguagesetting.name}}</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </li> -->
-
-                    <li class="setting">
-                        <a (click)="submit()" [ngClass]="
-                                parentMenuString == 'Logout' ? 'is-actived' : ''
-                            " (click)="onMenuParentClick('Logout', 'Logout')">
-                            <i class="fa fa-sign-out color" aria-hidden="true" title="Logout"></i></a>
-                    </li>
-                </ul>
+                </mat-nav-list>
+                <mat-nav-list class="setting-menu-list pull-right mat-head">
+                    <a><i class="fa fa-paint-brush" style="color: white" aria-hidden="true" [(colorPicker)]="themes"
+                            [cpOKButton]="true" [cpOKButtonClass]="' btn-primary btn-xs button'"
+                            [cpOKButtonText]="'Reset'" [cpCancelButton]="true"
+                            [cpCancelButtonClass]="'btn-primary btn-xs'" [cpCancelButtonText]="'Cancel'"
+                            [cpSaveClickOutside]="false" [cpCloseClickOutside]="false" [cpPresetColors]="[
+                            '#9400D3',
+                            '#0000FF',
+                            '#00FF00',
+                            '#FFFF00',
+                            '#FF7F00',
+                            '#FF0000'
+                        ]" [cpPositionRelativeToArrow]="true" [cpPosition]="'left'" [cpPositionOffset]="'80%'"
+                            [cpAlphaChannel]="'disabled'" [cpDisableInput]="false" [cpOutputFormat]="'hex'"
+                            [cpWidth]="'270px'" [cpHeight]="'390px'" (cpSliderChange)="colorPicker($event)"
+                            (colorPickerSelect)="defaultColor()"></i></a>
+                </mat-nav-list>
+                <mat-nav-list class="setting-menu-list pull-right" style="margin-top: 2px;">
+                    <img src="../../../assets/images/avatar 7.png" />
+                    <!-- <img src="{{downloadUrl}}"> -->
+                </mat-nav-list>
+                <mat-nav-list class="setting-menu-list pull-right mat-head">
+                    {{'Welcome'}} {{ user?.firstname | titlecase }} {{ user?.lastname | titlecase }}
+                </mat-nav-list>
             </div>
         </div>
     </div>
