--- a/src/app/dash-board/setting/profile/profile.component.html
+++ b/src/app/dash-board/setting/profile/profile.component.html
@@ -4,7 +4,7 @@
 
 <nav mat-tab-nav-bar>
     <a mat-tab-link routerLink="./app-registration" routerLinkActive #registrationTab="routerLinkActive"
-        [active]="registrationTab.isActive">{{'Registration' | translate }}</a>
+        [active]="registrationTab.isActive">Registration</a>
     <!-- <a mat-tab-link routerLink="./app-password" routerLinkActive #passwordTab="routerLinkActive"
         [active]="passwordTab.isActive">{{'Change Password' | translate }}</a>
     <a mat-tab-link routerLink="./app-username" routerLinkActive #userNameTab="routerLinkActive"
