--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -8,65 +8,33 @@
                         <img class="logo" src="../../assets/images/logo_nanda.png">
                     </span>
                     <h2 class="title">Sign In</h2>
-                    <div class="wrap-input100 validate-input" data-validate="Username is reauired">
-                        <span class="focus-input100"><i class="fa fa-user"></i></span>
-                        <input class="input100" type="username" placeholder="Username" id="Username" name="Username"
-                            formControlName="username" [ngClass]="{ 'is-invalid': submitted && f.username.errors }" />
-                    </div>
-                    <div *ngIf="submitted && f.username.errors" class="invalid-feedback" style="margin-top:0px;">
-                        <div *ngIf="f.username.errors.required">User Name is required</div>
-                    </div>
-
-                    <div class="wrap-input100 validate-input" data-validate="Password is required">
-                        <span class="focus-input100"><i class="fa fa-lock"></i></span>
-                        <input class="input100" name="Password" type="Password" placeholder="Password" id="password"
-                            #password1 formControlName="password"
-                            [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
-
-                        <div class="input-icon input-icon1" (click)="changeType(password1, 1)">
-                            <i [ngClass]="toggle1 ? 'far fa-eye-slash' : 'far fa-eye'"></i>
-                        </div>
-                    </div>
-
-                    <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
-                        <div *ngIf="f.password.errors.required">Password is required</div>
-                    </div>
-                    <!-- <div class="col-lg-12 col-md-12 col-xs-3 col-sm-3">
-                        <div class="form-group ">
-                            <span class="input-icon"><i class="fa fa-lock"></i></span>
-                            <input class="form-control" name="password" type="password" placeholder="Password"
-                                id="password" #password1 formControlName="password"
-                                [ngClass]="{ 'is-invalid': submitted && f.password.errors }">
-                            <div class="input-icon" (click)="changeType(password1, 1)">
-                                <span class="input-icon">
-                                    <i [ngClass]="toggle1 ? 'far fa-eye-slash' : 'far fa-eye'"></i></span>
-                            </div>
-                        </div>
-                        <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
-                            <div *ngIf="f.password.errors.required">Password is required
-                            </div>
-                        </div>
-                    </div> -->
-
-                    <!-- <select class="select wrap-input100 validate-input" formControlName="domain" required
-                        [ngClass]="{ 'is-invalid': submitted && f.domain.errors }">
-                        <option value="null">SelectDomain</option>
-                        <option value="Manufacturing">Manufacturing</option>
-                        <option value="Construction">Construction</option>
-                        <option value="Buying House">Buying House</option>
-                        <option value="Calibration Labs">Calibration Labs</option>
-                        <option value="School">School</option>
-                    </select>
-                    <div *ngIf="submitted && f.domain.errors" class="invalid-feedback">
-                        <div *ngIf="f.domain.errors.required">Domain is required</div>
-                    </div> -->
-
-                    <div class="container-login100-form-btn p-t-50 ">
-                        <div class="wrap-login100-form-btn">
-                            <button type="submit" class="login100-form-btn">
-                                Login
-                            </button>
-                        </div>
+                    <br>
+                    <mat-form-field class="field1" appearance="outline">
+                        <mat-label class="font">User Name</mat-label>
+                        <mat-icon matPrefix>account_circle</mat-icon>
+                        <input style="font-size: 17px;" formControlName="username" matInput placeholder="Username">
+                        <mat-error
+                            *ngIf="submitted && loginForm.controls['username'].invalid && loginForm.controls['username'].touched">
+                            User Name is required.
+                        </mat-error>
+                    </mat-form-field><br>
+                    <mat-form-field class="field1" appearance="outline">
+                        <mat-icon matPrefix>lock</mat-icon>
+                        <mat-label>Password</mat-label>
+                        <input matInput #password1 formControlName="password" style="font-size: 17px;" type="Password"
+                            placeholder="Password">
+                        <button type="button" mat-icon-button matSuffix (click)="changeType(password1, 1)">
+                            <mat-icon>{{toggle1 ? 'visibility_off' : 'visibility'}}</mat-icon>
+                        </button>
+                        <mat-error
+                            *ngIf="submitted && loginForm.controls['password'].invalid && loginForm.controls['password'].touched">
+                            Password is required.
+                        </mat-error>
+                    </mat-form-field>
+                    <div class="container-login100-form-btn p-t-30 ">
+                        <button mat-button type="submit" style="background-color: rgb(10, 51, 98); color: #ffff;">
+                            Login
+                        </button>
                     </div>
                 </form>
             </div>
