--- a/src/app/shared/services/renderercomponent/icon-renderer-component.html
+++ b/src/app/shared/services/renderercomponent/icon-renderer-component.html
@@ -1,9 +1,10 @@
 <a [ngStyle]="{'color':colorthemes_1}" *ngIf="this.label == 'Edit' ? true : false" href="javascript:void(0)"
     (click)="onClick($event)">
     <div class="iconalign" (click)="changeType(toggle)">
-        <span>
+        <!-- <span>
             <i [ngClass]="toggle? 'fa fa-pencil-square' : 'fa fa-pencil-square-o'"></i>
-        </span>
+        </span> -->
+        <mat-icon class='material-icons-outlined'>edit</mat-icon>
     </div>
 </a>
 <a [ngStyle]="{'color':colorthemes_1}" *ngIf="this.label == 'Status' ? true : false" (click)="onClick($event)">
@@ -15,22 +16,26 @@
 </a>
 <a [ngStyle]="{'color':colorthemes_1}" *ngIf="this.label == 'Delete' ? true : false" href="javascript:void(0)"
     (click)="onClick($event)">
-    <i class="fa fa-trash"></i>
+    <!-- <i class="fa fa-trash"></i> -->
+    <mat-icon class='material-icons-outlined'>delete</mat-icon>
 </a>
 <a [ngStyle]="{'color':colorthemes_1}" *ngIf="this.label == 'Audit' ? true : false" href="javascript:void(0)"
     (click)="onClick($event)">
-    <i class="fa fa-history"></i>
+    <!-- <i class="fa fa-history"></i> -->
+    <mat-icon class='material-icons-outlined'>history</mat-icon>
 </a>
 <a [ngStyle]="{'color':colorthemes_1}" *ngIf="this.label == 'View' ? true : false" href="javascript:void(0)"
     (click)="onClick($event)">
-    <i class="fa fa-eye"></i>
+    <!-- <i class="fa fa-eye"></i> -->
+    <mat-icon class='material-icons-outlined'>visibility</mat-icon>
 </a>
 <a [ngStyle]="{'color':colorthemes_1}" *ngIf="this.label == 'Pdf' ? true : false" href="javascript:void(0)"
     (click)="onClick($event)">
-    <i class="fa fa-file-pdf-o" style="color:red"></i>
+    <!-- <i class="fa fa-file-pdf-o" style="color:red"></i> -->
+    <mat-icon class='material-icons-outlined'>picture_as_pdf</mat-icon>
 </a>
 
-<a [ngStyle]="{'color':colorthemes_1}" *ngIf="this.label == 'File' ? true : false" href="{{downloadUrl}}"
+<!-- <a [ngStyle]="{'color':colorthemes_1}" *ngIf="this.label == 'File' ? true : false" href="{{downloadUrl}}"
     target="_blank">
     <i class="fa fa-download"></i>
-</a>
+</a> -->
