--- a/src/assets/css/common/Customs.css
+++ b/src/assets/css/common/Customs.css
@@ -11,14 +11,17 @@
     padding-top: 16px;
     width: 70px
 }
+
 .toggle a {
     padding: 15px 15px 0;
     margin: 0;
     cursor: pointer
 }
+
 .toggle a i {
     font-size: 26px
 }
+
 .nav.child_menu>li>a {
     color: rgba(255, 255, 255, 0.75);
     font-size: 12px;
@@ -33,16 +36,18 @@
 .navbar-right {
     margin-right: 0
 }
+
 .top_nav .navbar-right {
     margin: 5px;
     width: 70%;
     float: right
 }
+
 .top_nav .navbar-right li {
     display: inline-block;
     float: right;
     position: static;
-   /*  margin-bottom: 0;
+    /*  margin-bottom: 0;
     margin-right: 25px; */
 }
 
@@ -50,20 +55,24 @@
 a.user-profile {
     color: #5E6974 !important
 }
+
 .user-profile img {
     width: 29px;
     height: 29px;
     border-radius: 50%;
     margin-right: 10px
 }
+
 ul.top_profiles {
     height: 330px;
     width: 100%
 }
+
 ul.top_profiles li {
     margin: 0;
     padding: 3px 5px
 }
+
 ul.top_profiles li:nth-child(odd) {
     background-color: #eee
 }
@@ -76,11 +85,13 @@ ul.top_profiles li:nth-child(odd) {
 .open .dropdown-toggle.btn-success {
     background: #169F85
 }
+
 .btn-dark {
     color: #E9EDEF;
     background-color: #4B5F71;
     border-color: #364B5F
 }
+
 .btn-dark:hover,
 .btn-dark:focus,
 .btn-dark:active,
@@ -91,7 +102,9 @@ ul.top_profiles li:nth-child(odd) {
     border-color: #394D5F
 }
 
-*, *:before, *:after {
+*,
+*:before,
+*:after {
     box-sizing: border-box;
 }
 
@@ -134,27 +147,35 @@ ul.top_profiles li:nth-child(odd) {
     border: solid .08em #eee;
     border-radius: .1em
 }
+
 .fa-pull-left {
     float: left
 }
+
 .fa-pull-right {
     float: right
 }
+
 .fa.fa-pull-left {
     margin-right: .3em
 }
+
 .fa.fa-pull-right {
     margin-left: .3em
 }
+
 .pull-right {
     float: right
 }
+
 .pull-left {
     float: left
 }
+
 .fa.pull-left {
     margin-right: .3em
 }
+
 .fa.pull-right {
     margin-left: .3em
 }
@@ -163,6 +184,7 @@ ul.top_profiles li:nth-child(odd) {
 .top_nav .dropdown-menu li {
     width: 100%
 }
+
 .top_nav .dropdown-menu li a {
     width: 100%;
     padding: 12px 20px
@@ -190,24 +212,25 @@ ul.top_profiles li:nth-child(odd) {
     border-top-left-radius: 0;
     border-top-right-radius: 0
 }
+
 .dropdown-menu>li>a {
     color: #5A738E
 }
 
 
 .dropdown-menu.pull-right {
-  right: 0;
-  left: auto;
+    right: 0;
+    left: auto;
 }
 
-.pull-right > .dropdown-menu {
-  right: 0;
-  left: auto;
+.pull-right>.dropdown-menu {
+    right: 0;
+    left: auto;
 }
 
 
 .pull-right {
-  float: right !important;
+    float: right !important;
 }
 
 
@@ -219,7 +242,7 @@ ul.top_profiles li:nth-child(odd) {
 }
 
 .pull-right {
-    float: right!important;
+    float: right !important;
 }
 
 .badge {
@@ -241,11 +264,7 @@ ul.top_profiles li:nth-child(odd) {
     cursor: pointer;
 }
 
-<!-- mail style sheet -->
-
-
-
-.nav.navbar-nav>li>a {
+< !-- mail style sheet -->.nav.navbar-nav>li>a {
     color: #515356 !important;
 }
 
@@ -264,16 +283,16 @@ ul.top_profiles li:nth-child(odd) {
     width: 220px
 }
 
- /*  new changes--color change for drop down content*/
-.navbar-nav .open .dropdown-menu a:hover { 
- background-color: #eaeaea; 
-  -webkit-transition: all 1s ease;
-  -moz-transition: all 1s ease;
-  -o-transition: all 1s ease;
-  -ms-transition: all 1s ease;
-  transition: all 1s ease;
- 
-	
+/*  new changes--color change for drop down content*/
+.navbar-nav .open .dropdown-menu a:hover {
+    background-color: #eaeaea;
+    -webkit-transition: all 1s ease;
+    -moz-transition: all 1s ease;
+    -o-transition: all 1s ease;
+    -ms-transition: all 1s ease;
+    transition: all 1s ease;
+
+
 }
 
 .info-number .badge {
@@ -293,16 +312,15 @@ ul.top_profiles li:nth-child(odd) {
     color: #fff
 }
 
-<!-- top navigation -->
-
-
-a:hover,
+< !-- top navigation -->a:hover,
 a:focus {
     text-decoration: none
 }
+
 .navbar {
     margin-bottom: 0
 }
+
 .navbar-right {
     margin-right: 0
 }
@@ -310,7 +328,7 @@ a:focus {
 @media (min-width: 480px) {
     .top_nav .navbar-right li {
         position: relative;
-        
+
     }
 }
 
@@ -318,15 +336,18 @@ a:focus {
 .top_nav .dropdown-menu li {
     width: 100%
 }
+
 .top_nav .dropdown-menu li a {
     width: 100%;
     padding: 12px 20px;
-   
+
 }
+
 .top_nav li a i {
     font-size: 24px;
-    
+
 }
+
 .navbar-static-top {
     position: fixed;
     top: 0;
@@ -335,11 +356,12 @@ a:focus {
 
 
 .nav.navbar-nav>li>a {
-    color: #ffffff!important;
+    color: #ffffff !important;
     font-weight: bold;
-    font-size:12px;
-    font-family:Arial;
+    font-size: 12px;
+    font-family: Arial;
 }
+
 .nav.top_menu>li>a {
     position: relative;
     display: block;
@@ -356,6 +378,7 @@ a:focus {
 .top_search {
     padding: 0
 }
+
 .top_search .form-control {
     border-right: 0;
     box-shadow: inset 0 1px 0px rgba(0, 0, 0, 0.075);
@@ -363,10 +386,12 @@ a:focus {
     padding-left: 20px;
     border: 1px solid rgba(221, 226, 232, 0.49)
 }
+
 .top_search .form-control:focus {
     border: 1px solid rgba(221, 226, 232, 0.49);
     border-right: 0
 }
+
 .top_search .input-group-btn button {
     border-radius: 0px 25px 25px 0px;
     border: 1px solid rgba(221, 226, 232, 0.49);
@@ -375,20 +400,24 @@ a:focus {
     color: #93A2B2;
     margin-bottom: 0 !important
 }
+
 .toggle {
     float: left;
     margin: 0;
     padding-top: 16px;
     width: 70px
 }
+
 .toggle a {
     padding: 15px 15px 0;
     margin: 0;
     cursor: pointer
 }
+
 .toggle a i {
     font-size: 12px
 }
+
 .nav.child_menu>li>a {
     color: rgba(255, 255, 255, 0.75);
     font-size: 12px;
@@ -399,20 +428,24 @@ a:focus {
 a.user-profile {
     color: #5E6974 !important
 }
+
 .user-profile img {
     width: 29px;
     height: 29px;
     border-radius: 50%;
     margin-right: 10px
 }
+
 ul.top_profiles {
     height: 330px;
     width: 100%
 }
+
 ul.top_profiles li {
     margin: 0;
     padding: 3px 5px
 }
+
 ul.top_profiles li:nth-child(odd) {
     background-color: #eee
 }
@@ -423,6 +456,7 @@ ul.top_profiles li:nth-child(odd) {
     color: #fff;
     text-decoration: none
 }
+
 .fontawesome-icon-list .fa-hover a {
     display: block;
     line-height: 32px;
@@ -430,10 +464,12 @@ ul.top_profiles li:nth-child(odd) {
     padding-left: 10px;
     border-radius: 4px
 }
+
 .fontawesome-icon-list .fa-hover a:hover .fa {
     font-size: 28px;
     vertical-align: -6px
 }
+
 .fontawesome-icon-list .fa-hover a .fa {
     width: 32px;
     font-size: 16px;
@@ -441,6 +477,7 @@ ul.top_profiles li:nth-child(odd) {
     text-align: right;
     margin-right: 10px
 }
+
 .main_menu .fa {
     width: 26px;
     opacity: .99;
@@ -453,31 +490,33 @@ ul.top_profiles li:nth-child(odd) {
     -moz-osx-font-smoothing: grayscale
 }
 
-<!-- mailing -->
-
-
-.tile:hover {
+< !-- mailing -->.tile:hover {
     text-decoration: none
 }
+
 .tile_header {
     border-bottom: transparent;
     padding: 7px 15px;
     margin-bottom: 15px;
     background: #E7E7E7
 }
+
 .tile_head h4 {
     margin-top: 0;
     margin-bottom: 5px
 }
+
 .tiles-bottom {
     padding: 5px 10px;
     margin-top: 10px;
     background: rgba(194, 194, 194, 0.3);
     text-align: left
 }
+
 a.star {
     color: #428bca !important
 }
+
 .mail_content {
     background: none repeat scroll 0 0 #FFFFFF;
     border-radius: 4px;
@@ -486,19 +525,23 @@ a.star {
     padding: 10px 11px;
     width: 100%
 }
+
 .list-btn-mail {
     margin-bottom: 15px
 }
+
 .list-btn-mail.active {
     border-bottom: 1px solid #39B3D7;
     padding: 0 0 14px
 }
+
 .list-btn-mail>i {
     float: left;
     font-size: 18px;
     font-style: normal;
     width: 33px
 }
+
 .list-btn-mail>.cn {
     background: none repeat scroll 0 0 #39B3D7;
     border-radius: 12px;
@@ -507,11 +550,13 @@ a.star {
     font-style: normal;
     padding: 0 5px
 }
+
 .button-mail {
     margin: 0 0 15px !important;
     text-align: left;
     width: 100%
 }
+
 button,
 .buttons,
 .btn,
@@ -519,63 +564,76 @@ button,
     margin-bottom: 5px;
     margin-right: 5px
 }
+
 .btn-group-vertical .btn,
 .btn-group .btn {
     margin-bottom: 0;
     margin-right: 0
 }
+
 .mail_list_column {
     border-left: 1px solid #DBDBDB
 }
+
 .mail_view {
     border-left: 1px solid #DBDBDB
 }
+
 .mail_list {
     width: 100%;
     border-bottom: 1px solid #DBDBDB;
     margin-bottom: 2px;
     display: inline-block
 }
+
 .mail_list .left {
     width: 5%;
     float: left;
     margin-right: 3%
 }
+
 .mail_list .right {
     width: 90%;
     float: left
 }
+
 .mail_list h3 {
     font-size: 15px;
     font-weight: bold;
     margin: 0px 0 6px
 }
+
 .mail_list h3 small {
     float: right;
     color: #ADABAB;
     font-size: 11px;
     line-height: 20px
 }
+
 .mail_list .badge {
     padding: 3px 6px;
     font-size: 8px;
     background: #BAB7B7
 }
+
 @media (max-width: 767px) {
     .mail_list {
         margin-bottom: 5px;
         display: inline-block
     }
 }
+
 .mail_heading h4 {
     font-size: 18px;
     border-bottom: 1px solid #ddd;
     padding-bottom: 10px;
     margin-top: 20px
 }
+
 .attachment {
     margin-top: 30px
 }
+
 .attachment ul {
     width: 100%;
     list-style: none;
@@ -583,44 +641,50 @@ button,
     display: inline-block;
     margin-bottom: 30px
 }
+
 .attachment ul li {
     float: left;
     width: 150px;
     margin-right: 10px;
     margin-bottom: 10px
 }
+
 .attachment ul li img {
     height: 150px;
     border: 1px solid #ddd;
     padding: 5px;
     margin-bottom: 10px
 }
+
 .attachment ul li span {
     float: right
 }
+
 .attachment .file-name {
     float: left
 }
+
 .attachment .links {
     width: 100%;
     display: inline-block
 }
 
-<!-- log in form -->
-
-
-.product_social ul li a i {
+< !-- log in form -->.product_social ul li a i {
     font-size: 35px
 }
+
 .login {
     background: #F7F7F7
 }
+
 .login .fa-paw {
     font-size: 26px
 }
+
 a.hiddenanchor {
     display: none
 }
+
 .login_wrapper {
     right: 0px;
     margin: 0px auto;
@@ -633,16 +697,19 @@ a.hiddenanchor {
 .login_form {
     z-index: 22
 }
-#signup:target ~ .login_wrapper .registration_form,
-#signin:target ~ .login_wrapper .login_form {
+
+#signup:target~.login_wrapper .registration_form,
+#signin:target~.login_wrapper .login_form {
     z-index: 22;
     animation-name: fadeInLeft;
     animation-delay: .1s
 }
-#signup:target ~ .login_wrapper .login_form,
-#signin:target ~ .login_wrapper .registration_form {
+
+#signup:target~.login_wrapper .login_form,
+#signin:target~.login_wrapper .registration_form {
     animation-name: fadeOutLeft
 }
+
 .animate {
     -webkit-animation-duration: 0.5s;
     -webkit-animation-timing-function: ease;
@@ -660,15 +727,13 @@ a.hiddenanchor {
     animation-timing-function: ease;
     animation-fill-mode: both
 }
+
 .login_box {
     padding: 20px;
     margin: auto
 }
 
-<!-- mail list image -->
-
-
-ul.msg_list li a .image img {
+< !-- mail list image -->ul.msg_list li a .image img {
     border-radius: 2px 2px 2px 2px;
     -webkit-border-radius: 2px 2px 2px 2px;
     float: left;
@@ -676,7 +741,7 @@ ul.msg_list li a .image img {
     width: 11%
 }
 
-<!-- hover image style sheet-->
+< !-- hover image style sheet-->
 
 /*<!-- new changes --change the background color on hovering log out part -->*/
 .top_nav .nav>li>a:focus,
@@ -684,19 +749,19 @@ ul.msg_list li a .image img {
 .top_nav .nav .open>a,
 .top_nav .nav .open>a:focus,
 .top_nav .nav .open>a:hover {
-    background-color: #eaeaea; 
-  -webkit-transition: all 1s ease;
-  -moz-transition: all 1s ease;
-  -o-transition: all 1s ease;
-  -ms-transition: all 1s ease;
-  transition: all 1s ease;
+    background-color: #eaeaea;
+    -webkit-transition: all 1s ease;
+    -moz-transition: all 1s ease;
+    -o-transition: all 1s ease;
+    -ms-transition: all 1s ease;
+    transition: all 1s ease;
 }
-<!-- sample hover -->
 
-a {
+< !-- sample hover -->a {
     color: #5A738E;
     text-decoration: none
 }
+
 a,
 a:visited,
 a:focus,
@@ -712,6 +777,7 @@ a:active,
 .btn.active.focus {
     outline: 0
 }
+
 a:hover,
 a:focus {
     text-decoration: none
@@ -722,6 +788,7 @@ a:focus {
     color: #fff;
     text-decoration: none
 }
+
 .fontawesome-icon-list .fa-hover a {
     display: block;
     line-height: 32px;
@@ -729,10 +796,12 @@ a:focus {
     padding-left: 10px;
     border-radius: 4px
 }
+
 .fontawesome-icon-list .fa-hover a:hover .fa {
     font-size: 28px;
     vertical-align: -6px
 }
+
 .fontawesome-icon-list .fa-hover a .fa {
     width: 32px;
     font-size: 16px;
@@ -741,9 +810,7 @@ a:focus {
     margin-right: 10px
 }
 
-<!-- row title count-->
-
-.row {
+< !-- row title count-->.row {
     margin-right: -10px;
     margin-left: -10px
 }
@@ -782,6 +849,7 @@ a:focus {
         padding-bottom: 10px
     }
 }
+
 .tile_count .tile_stats_count:before {
     content: "";
     position: absolute;
@@ -790,42 +858,46 @@ a:focus {
     border-left: 2px solid #ADB2B5;
     margin-top: 10px
 }
+
 @media (min-width: 992px) {
     .tile_count .tile_stats_count:first-child:before {
         border-left: 0
     }
 }
+
 .tile_count .tile_stats_count .count {
     font-size: 30px;
     line-height: 47px;
     font-weight: 600
 }
+
 @media (min-width: 768px) {
     .tile_count .tile_stats_count .count {
         font-size: 40px
     }
 }
+
 @media (min-width: 992px) and (max-width: 1100px) {
     .tile_count .tile_stats_count .count {
         font-size: 30px
     }
 }
+
 .tile_count .tile_stats_count span {
     font-size: 12px
 }
+
 @media (min-width: 768px) {
     .tile_count .tile_stats_count span {
         font-size: 13px
     }
 }
+
 .tile_count .tile_stats_count .count_bottom i {
     width: 12px
 }
 
-<!-- COUNT BOTTOM -->
-
-
-.tile_count .tile_stats_count .count_bottom i {
+< !-- COUNT BOTTOM -->.tile_count .tile_stats_count .count_bottom i {
     width: 12px
 }
 
@@ -835,6 +907,7 @@ a:focus {
     font-weight: bold;
     line-height: 1.65857
 }
+
 .tile-stats .count,
 .tile-stats h3,
 .tile-stats p {
@@ -846,15 +919,11 @@ a:focus {
 }
 
 .green {
-	
-	color:#1ABB9C;
+
+    color: #1ABB9C;
 }
 
 
 .red {
     color: #E74C3C;
 }
-
-
-
-
